fix: Event page now displays properly on mobile

--- a/src/app/(site)/css/eventListLayout.css
+++ b/src/app/(site)/css/eventListLayout.css
@@ -14,6 +14,7 @@
     padding-bottom: 40px;
     width: 100vw;
     height: auto;
+    margin-left: 5%;
 }
 
 .EventTypeSelector {
