--- a/src/app/(site)/css/eventPageLayout.css
+++ b/src/app/(site)/css/eventPageLayout.css
@@ -1,9 +1,13 @@
+.BackButtonContainer{
+ padding-top: 5%;
+  margin-bottom: 3%;
+}
+
 .BackToEventsButton {
     display: flex;
     width: fit-content;
     font-family: "NeueMachina-Regular";
     color: #493725;
-    margin-top: 4%;
     margin-left: 5%;
     padding-right: 40px;
     padding-left: 40px;
@@ -36,6 +40,7 @@
     align-items: center;
     box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.05);
     overflow: hidden;
+    margin-left: 5%;
   }
 
 .Carousel {
@@ -138,4 +143,20 @@
     &:hover {
         background-color: #D7CEBF;
     }
+}
+
+@media only screen and (max-width: 768px) {
+  .BackButtonContainer{
+    padding-top: 12%;
+   }
+
+  .CarouselContainer {
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .CurrentEvent {
+    flex-direction: column;
+  }
 }
